- Renamed some files. - Fixed wall kick (preprocessor function had a semi colon in it :P). - Added more levels with gravity speeds (may need some tuning). - Added rendering for the held piece. - Added rendering for the piece queue. - Added some todos. - Added FPS top right. - Added Scoring with Combos. - Added Level, Score, Lines Cleared text. - Added Pause + Continue Button. - Removed ESC key from quitting game.
I attempted to do some collision checks and locks with bitwise operators only, as you could theoretically could avoid looping through every cell and instead only just the rows. The way I went about it was not right though.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(SRC_DIR "${CMAKE_SOURCE_DIR}/source")
 add_executable(zetris
     "${SRC_DIR}/main.c"
     "${SRC_DIR}/game.c"
-    "${SRC_DIR}/blocks.c"
+    "${SRC_DIR}/piece.c"
     "${SRC_DIR}/playfield.c"
 )
 target_include_directories(zetris PRIVATE "${INCLUDE_DIR}")
